Fix some bug of debugging

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description-file =
     README.rst
 author = OpenStack
 author-email = openstack-dev@lists.openstack.org
-home-page = http://www.openstack.org/
+home-page = https://github.com/cxhuawei/marker
 classifier =
     Environment :: OpenStack
     Intended Audience :: Developers
@@ -24,17 +24,7 @@ packages =
 
 [entry_points]
 console_scripts =
-    shaker = shaker.engine.server:main
-    shaker-report = shaker.engine.report:main
-    shaker-agent = shaker.agent.agent:main
-    shaker-image-builder = shaker.engine.image_builder:build_image_entry_point
-    shaker-cleanup = shaker.engine.image_builder:cleanup_entry_point
-    shaker-spot = shaker.engine.spot:main
-    shaker-all-in-one = shaker.engine.all_in_one:main
-
-oslo.config.opts =
-    oslo_log = oslo_log._options:list_opts
-    shaker.engine.config = shaker.engine.config:list_opts
+    marker = marker.cli.main:main
 
 [build_sphinx]
 all_files = 1
